--- a/styles/main.css
+++ b/styles/main.css
@@ -3,17 +3,16 @@
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
-  
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+
   }
   *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
   }
-
+  body{
+    margin: 0px 5%;
+  }
 
 h1{
     font-size: 20px;
@@ -27,19 +26,18 @@ h1{
     padding: 0 10%;
     gap: 5px;
 }
-.form-Container input{
-    height: 30px;
-    border: none;
-    padding: 10px;
-}
+
 select{
-    height: 30px;
-    border: none;
+    height: 35px;
+    border: 1px solid #f3f3f3;
+    border-radius: 10px;
+    padding: 0px 10px;
 }
 
 .form-Container input:hover,
 .form-Container input:focus{
-    outline: none;
+    outline: #0085ff;
+    border: #0085ff;
 }
 .text-info{
     padding: 0px 10px 20px;
