--- a/styles/main.css
+++ b/styles/main.css
@@ -29,14 +29,15 @@ h1{
 
 select{
     height: 35px;
-    border: 1px solid #f3f3f3;
+    border: 2px solid #f3f3f3;
     border-radius: 10px;
     padding: 0px 10px;
 }
 
-.form-Container input:hover,
-.form-Container input:focus{
-    outline: #0085ff;
+
+.form-Container select:focus {
+    
+    outline-color: #0085ff;
     border: #0085ff;
 }
 .text-info{
@@ -45,20 +46,35 @@ select{
 }
 .button{
     margin: 15px 0px;
-    height: 45px;
-
+    padding: 0px 10px;
+    height: 40px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #0085ff;
+    border-radius: 10px;
 }
+
 .avaluo{
-    border: 1px solid #fff;
+    border: 2px solid #0085ff;
     margin: 20px 10%;
     padding: 20px;
+    border-radius: 10px;
 }
 
 
 .hidden{
     display: none;
 }
-
+stong{
+    
+    font-weight: bold;
+}
+.center{
+    padding: 10px 0px;
+    text-align: center;
+    
+}
 @media screen and (min-width:768px){
     h1{
         font-size: 30px;
@@ -70,7 +86,7 @@ select{
         gap: 10px;
     }
     .avaluo{
-        border: 1px solid #fff;
+        border: 2px solid #0085ff;
         margin: 20px 20%;
         padding: 20px;
     }
